--- a/webdevelopment-tasks.html
+++ b/webdevelopment-tasks.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Atsuyo Taniguchi 18296">
         <title>Web Development Project</title>
-		<link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
+        <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"> 
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     
